# reimplalgo

./: CMakeLists.txt  README.md
.github/workflows/: ccpp.yml
reimplalgo/: combination.hpp  factorial.hpp  fibonacci.hpp  horner.hpp  pow.hpp  rank_map.hpp
reimplalgo/integral/: trapezoidal_rule.hpp
test/: CMakeLists.txt  combination.cpp  factorial.cpp  fibonacci.cpp  horner.cpp  pow.cpp  rank_map.cpp
test/gtest/: CMakeLists.txt
test/integral/: CMakeLists.txt  trapezoidal_rule.cpp
